--- a/projects/Building_Applications_with_Vector_Databases/vector-embeddings-local/embeddings_local_demo.ipynb
+++ b/projects/Building_Applications_with_Vector_Databases/vector-embeddings-local/embeddings_local_demo.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7aa57a55",
+   "id": "4a36b15d",
    "metadata": {},
    "source": [
     "# Hands-on: Create Embeddings and Store Vectors Locally\n",
     "\n",
-    "This notebook demonstrates how to create text embeddings, store them locally, and perform semantic similarity search."
+    "This notebook demonstrates how to create text embeddings, store them locally, **check the local file path**, and perform semantic similarity search."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1ae99389",
+   "id": "f1f228ea",
    "metadata": {},
    "source": [
     "## 1. Install Dependencies\n",
@@ -21,26 +21,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "34113902",
+   "execution_count": 1,
+   "id": "a8610163",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (215392287.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpython3 -m pip install sentence-transformers numpy\u001b[39m\n               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: sentence-transformers in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (5.2.0)\n",
+      "Requirement already satisfied: numpy in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (2.3.5)\n",
+      "Requirement already satisfied: transformers<6.0.0,>=4.41.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from sentence-transformers) (4.57.6)\n",
+      "Requirement already satisfied: tqdm in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from sentence-transformers) (4.67.1)\n",
+      "Requirement already satisfied: torch>=1.11.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from sentence-transformers) (2.9.1)\n",
+      "Requirement already satisfied: scikit-learn in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from sentence-transformers) (1.8.0)\n",
+      "Requirement already satisfied: scipy in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from sentence-transformers) (1.16.3)\n",
+      "Requirement already satisfied: huggingface-hub>=0.20.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from sentence-transformers) (0.36.0)\n",
+      "Requirement already satisfied: typing_extensions>=4.5.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from sentence-transformers) (4.15.0)\n",
+      "Requirement already satisfied: filelock in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from transformers<6.0.0,>=4.41.0->sentence-transformers) (3.20.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from transformers<6.0.0,>=4.41.0->sentence-transformers) (24.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from transformers<6.0.0,>=4.41.0->sentence-transformers) (6.0.3)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from transformers<6.0.0,>=4.41.0->sentence-transformers) (2026.1.15)\n",
+      "Requirement already satisfied: requests in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from transformers<6.0.0,>=4.41.0->sentence-transformers) (2.32.5)\n",
+      "Requirement already satisfied: tokenizers<=0.23.0,>=0.22.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from transformers<6.0.0,>=4.41.0->sentence-transformers) (0.22.2)\n",
+      "Requirement already satisfied: safetensors>=0.4.3 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from transformers<6.0.0,>=4.41.0->sentence-transformers) (0.7.0)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2025.10.0)\n",
+      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (1.2.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from torch>=1.11.0->sentence-transformers) (1.14.0)\n",
+      "Requirement already satisfied: networkx>=2.5.1 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from torch>=1.11.0->sentence-transformers) (3.6.1)\n",
+      "Requirement already satisfied: jinja2 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from torch>=1.11.0->sentence-transformers) (3.1.6)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from sympy>=1.13.3->torch>=1.11.0->sentence-transformers) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from jinja2->torch>=1.11.0->sentence-transformers) (3.0.3)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from requests->transformers<6.0.0,>=4.41.0->sentence-transformers) (3.4.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from requests->transformers<6.0.0,>=4.41.0->sentence-transformers) (3.11)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from requests->transformers<6.0.0,>=4.41.0->sentence-transformers) (2.6.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from requests->transformers<6.0.0,>=4.41.0->sentence-transformers) (2026.1.4)\n",
+      "Requirement already satisfied: joblib>=1.3.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from scikit-learn->sentence-transformers) (1.5.3)\n",
+      "Requirement already satisfied: threadpoolctl>=3.2.0 in /Users/immaculate.x/Library/Python/3.11/lib/python/site-packages (from scikit-learn->sentence-transformers) (3.6.0)\n"
      ]
     }
    ],
    "source": [
-    "python3 -m pip install sentence-transformers numpy"
+    "!pip install sentence-transformers numpy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0ff53076",
+   "id": "c74e498a",
    "metadata": {},
    "source": [
     "## 2. Sample Data"
@@ -48,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f73e7163",
+   "execution_count": 2,
+   "id": "f0f371d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f06b01",
+   "id": "5d4f41ee",
    "metadata": {},
    "source": [
     "## 3. Create Embeddings"
@@ -72,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ff635573",
+   "execution_count": 3,
+   "id": "ab5037b5",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22189b6",
+   "id": "509aa4b2",
    "metadata": {},
    "source": [
     "## 4. Store Embeddings Locally"
@@ -112,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "580f1272",
+   "execution_count": 4,
+   "id": "5a27c2f7",
    "metadata": {},
    "outputs": [
     {
@@ -125,6 +153,8 @@
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
     "np.save(\"embeddings.npy\", embeddings)\n",
     "np.save(\"documents.npy\", np.array(documents))\n",
     "\n",
@@ -133,23 +163,71 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37598045",
+   "id": "b4a6340d",
    "metadata": {},
    "source": [
-    "## 5. Load Stored Embeddings"
+    "## 5. Check Local File Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "663c8534",
+   "execution_count": 5,
+   "id": "f4741a8b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded embeddings: (5, 384)\n"
+      "Current working directory:\n",
+      "/Users/immaculate.x/Downloads\n",
+      "\n",
+      "Files in current directory:\n",
+      "['1 Introduction to AI.pdf', 'ds6-1_1764522876207 (1).zip', 'OnVUE 2.app', 'Ollama.dmg', 'documents.npy', 'CamScanner 12-01-2025 20.58.28_2 (1).pdf', 'DS_6.ipynb', 'QC-template- April 2023 - March 2024.xls', 'HousePrices.csv', 'C1M1_Assignment.ipynb', 'loan.csv', 'RAG_Assignment_Submission.ipynb', '7thDec.ipynb', '.DS_Store', '9579817_15881981765634509338.pdf', 'certificate.pdf', 'Bishop-Pattern-Recognition-and-Machine-Learning-2006.pdf', 'embeddings_local_demo_with_path.ipynb', '.localized', 'ds_10 (2).ipynb', 'RAG_M5.pdf', 'data_1765040901049.zip', 'd10fcfd6-105c-4383-b82d-b8d754260bd4.pdf', 'amazon_sales_2025_INR.csv', 'RAG_M4.pdf', 'hypo (1).ipynb', 'houseprices_1763830945485.zip', 'data_1765040901049 (1).zip', 'Ex_Files_Python_EssT.zip', 'xavier.zip', 'C1M1_Assignment_filled.ipynb', 'Points to Remember - AWS - Cloud Practioner.pdf', 'Braze Certification AI Fundamentals Study Guide.pdf', 'hypo_2 (1).ipynb', 'RAG_M3.pdf', 'diabetes_012_health_indicators_BRFSS2015.csv', 'Lesson_5_Facial_Similarity_Search.ipynb', 'RAG_M2.pdf', 'JR.KG PORTIONS.pdf', 'QC-template- April 2022 - March 2023.xls', 'Ex_Files_Python_EssT (1).zip', 'RAG_M1.pdf', 'backupxavier.zip', 'ML_1.ipynb', 'ml_day2 (1).ipynb', '~$AEs Test Report May 2025 - March 2026.xlsx', 'stmarkschurch.sql', '1729747874624.jpeg', 'breast-cancer.csv', 'ds_10 (1).ipynb', 'AEs Test Report April 2024 - March 2025.xlsx', 'DS_6 (1).ipynb', 'DS_6 (1) 2.ipynb', 'ml_day2.ipynb', 'ML_3.ipynb', 'embeddings.npy', 'JR.KG PORTIONS (1).pdf', 'ds_10.ipynb', 'd5f46e6d-55e4-40fc-9caa-e5b3128a8167.pdf', 'ML_4 (1).ipynb', 'CamScanner 12-01-2025 20.58.28_2.pdf', 'stmarkschurch (1).sql', 'HousePrices(1).csv', 'C1M1_Ungraded_Lab_2.ipynb', 'Blazer AI Fundamentals.pdf', 'ChatGPT Image Jan 18, 2026, 10_19_16 PM.png', 'hypo_2 (2).ipynb', 'certificate (1).pdf', 'Data Science .pdf', 'AusApparalSales4thQrt2020.csv', 'ImmaLinkedin.png', 'ML_4.ipynb', 'AusApparalSales4thQrt2020 2.csv', 'AEs Test Report May 2025 - March 2026.xlsx', 'embeddings_local_demo.ipynb', 'ds6-1_1764522876207.zip', 'C1M1_Ungraded_Lab_1.ipynb', 'housing_data.csv']\n",
+      "\n",
+      "Absolute path of embeddings file:\n",
+      "/Users/immaculate.x/Downloads/embeddings.npy\n",
+      "\n",
+      "Does embeddings file exist?\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(\"Current working directory:\")\n",
+    "print(os.getcwd())\n",
+    "\n",
+    "print(\"\\nFiles in current directory:\")\n",
+    "print(os.listdir())\n",
+    "\n",
+    "print(\"\\nAbsolute path of embeddings file:\")\n",
+    "print(os.path.abspath(\"embeddings.npy\"))\n",
+    "\n",
+    "print(\"\\nDoes embeddings file exist?\")\n",
+    "print(os.path.exists(\"embeddings.npy\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2540098b",
+   "metadata": {},
+   "source": [
+    "## 6. Load Stored Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a86b486a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded embeddings shape: (5, 384)\n"
      ]
     }
    ],
@@ -157,21 +235,21 @@
     "stored_embeddings = np.load(\"embeddings.npy\")\n",
     "stored_documents = np.load(\"documents.npy\")\n",
     "\n",
-    "print(\"Loaded embeddings:\", stored_embeddings.shape)"
+    "print(\"Loaded embeddings shape:\", stored_embeddings.shape)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a4c74c2",
+   "id": "36bc0740",
    "metadata": {},
    "source": [
-    "## 6. Similarity Search"
+    "## 7. Similarity Search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71bfe329",
+   "execution_count": 7,
+   "id": "912c5cf0",
    "metadata": {},
    "outputs": [
     {
